[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameStateManager.gd" type="Script" id=1]
[ext_resource path="res://ScreenManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://TitleScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://UserInformationScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://Singletons/Networking.tscn" type="PackedScene" id=5]

[node name="GameStateManager" type="Node"]

script = ExtResource( 1 )

[node name="ScreenManager" parent="." index="0" instance=ExtResource( 2 )]

[node name="TitleScreen" parent="ScreenManager" index="0" instance=ExtResource( 3 )]

[node name="UserInformationScreen" parent="ScreenManager" index="1" instance=ExtResource( 4 )]

[node name="Networking" parent="." index="1" instance=ExtResource( 5 )]

[connection signal="sendMessageToServer" from="ScreenManager" to="." method="_on_ScreenManager_sendMessageToServer"]

[connection signal="answersReceived" from="Networking" to="." method="_on_Networking_answersReceived"]

[connection signal="enteredInvalidAnswer" from="Networking" to="." method="_on_Networking_enteredInvalidAnswer"]

[connection signal="enteredInvalidHostCode" from="Networking" to="." method="_on_Networking_enteredInvalidHostCode"]

[connection signal="enteredInvalidMultiVote" from="Networking" to="." method="_on_Networking_enteredInvalidMultiVote"]

[connection signal="enteredInvalidUsername" from="Networking" to="." method="_on_Networking_enteredInvalidUsername"]

[connection signal="enteredInvalidVote" from="Networking" to="." method="_on_Networking_enteredInvalidVote"]

[connection signal="enteredValidAnswer" from="Networking" to="." method="_on_Networking_enteredValidAnswer"]

[connection signal="enteredValidMultiVote" from="Networking" to="." method="_on_Networking_enteredValidMultiVote"]

[connection signal="enteredValidUsername" from="Networking" to="." method="_on_Networking_enteredValidUsername"]

[connection signal="enteredValidVote" from="Networking" to="." method="_on_Networking_enteredValidVote"]

[connection signal="forcedToDisconnect" from="Networking" to="." method="_on_Networking_forcedToDisconnect"]

[connection signal="gameEndedByHost" from="Networking" to="." method="_on_Networking_gameEndedByHost"]

[connection signal="gameStartedByHost" from="Networking" to="." method="_on_Networking_gameStartedByHost"]

[connection signal="promptsReceived" from="Networking" to="." method="_on_Networking_promptsReceived"]


